// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slack jsx can ignore falsy children 1`] = `
Object {
  "blocks": Array [
    Object {
      "type": "divider",
    },
    Object {
      "type": "divider",
    },
    Object {
      "type": "divider",
    },
  ],
  "mrkdwn": true,
  "response_type": "in_channel",
  "text": "My weekly summary",
}
`;

exports[`slack jsx can render nested fragments in maps 1`] = `
Object {
  "blocks": Array [
    Object {
      "type": "divider",
    },
    Object {
      "text": Object {
        "text": "My growth this week",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
    Object {
      "type": "divider",
    },
    Object {
      "text": Object {
        "text": "*m1: uh1*",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
    Object {
      "elements": Array [
        Object {
          "alt_text": "improved",
          "image_url": "https://user-images.githubusercontent.com/97470/75739421-a7138180-5cb9-11ea-9547-e64acf86eb59.png",
          "type": "image",
        },
        Object {
          "alt_text": "declined",
          "image_url": "https://user-images.githubusercontent.com/97470/75739424-a7ac1800-5cb9-11ea-969a-e1ac9f12a41a.png",
          "type": "image",
        },
        Object {
          "text": ":evergreen_tree: :small_red_triangle_down: stats go here",
          "type": "mrkdwn",
          "verbatim": false,
        },
      ],
      "type": "context",
    },
    Object {
      "text": Object {
        "text": "*m1: uh2*",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
    Object {
      "elements": Array [
        Object {
          "alt_text": "improved",
          "image_url": "https://user-images.githubusercontent.com/97470/75739421-a7138180-5cb9-11ea-9547-e64acf86eb59.png",
          "type": "image",
        },
        Object {
          "alt_text": "declined",
          "image_url": "https://user-images.githubusercontent.com/97470/75739424-a7ac1800-5cb9-11ea-969a-e1ac9f12a41a.png",
          "type": "image",
        },
        Object {
          "text": ":evergreen_tree: :small_red_triangle_down: stats go here",
          "type": "mrkdwn",
          "verbatim": false,
        },
      ],
      "type": "context",
    },
    Object {
      "text": Object {
        "text": "*m1: uh3*",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
    Object {
      "elements": Array [
        Object {
          "alt_text": "improved",
          "image_url": "https://user-images.githubusercontent.com/97470/75739421-a7138180-5cb9-11ea-9547-e64acf86eb59.png",
          "type": "image",
        },
        Object {
          "alt_text": "declined",
          "image_url": "https://user-images.githubusercontent.com/97470/75739424-a7ac1800-5cb9-11ea-969a-e1ac9f12a41a.png",
          "type": "image",
        },
        Object {
          "text": ":evergreen_tree: :small_red_triangle_down: stats go here",
          "type": "mrkdwn",
          "verbatim": false,
        },
      ],
      "type": "context",
    },
    Object {
      "text": Object {
        "text": "*m1: uh4*",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
    Object {
      "elements": Array [
        Object {
          "alt_text": "improved",
          "image_url": "https://user-images.githubusercontent.com/97470/75739421-a7138180-5cb9-11ea-9547-e64acf86eb59.png",
          "type": "image",
        },
        Object {
          "alt_text": "declined",
          "image_url": "https://user-images.githubusercontent.com/97470/75739424-a7ac1800-5cb9-11ea-969a-e1ac9f12a41a.png",
          "type": "image",
        },
        Object {
          "text": ":evergreen_tree: :small_red_triangle_down: stats go here",
          "type": "mrkdwn",
          "verbatim": false,
        },
      ],
      "type": "context",
    },
  ],
  "mrkdwn": true,
  "response_type": "in_channel",
  "text": "My weekly summary",
}
`;

exports[`slack jsx can render simple fragments 1`] = `
Object {
  "blocks": Array [
    Object {
      "type": "divider",
    },
    Object {
      "type": "divider",
    },
    Object {
      "type": "divider",
    },
  ],
  "mrkdwn": true,
  "response_type": "in_channel",
  "text": "My weekly summary",
}
`;

exports[`slack jsx component with array of nested component children 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "section text :sadkeanu:",
        "type": "plain_text",
      },
      "type": "section",
    },
    Object {
      "type": "divider",
    },
    Object {
      "block_id": "section1",
      "text": Object {
        "text": "\`\`\`code\`\`\`",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
  ],
  "channel": "test_channel",
  "mrkdwn": true,
  "response_type": "in_channel",
  "text": "this is alt text",
  "token": "test_token",
}
`;

exports[`slack jsx component with component props 1`] = `
Object {
  "accessory": Object {
    "alt_text": "foo",
    "image_url": "foo",
    "type": "image",
  },
  "fields": Array [
    Object {
      "text": "**foo**: bar",
      "type": "mrkdwn",
      "verbatim": false,
    },
    Object {
      "text": "**foo**: bar",
      "type": "mrkdwn",
      "verbatim": false,
    },
  ],
  "text": Object {
    "text": "\`\`\`code\`\`\`",
    "type": "mrkdwn",
    "verbatim": false,
  },
  "type": "section",
}
`;

exports[`slack jsx component with single nested component child 1`] = `
Object {
  "elements": Array [
    Object {
      "emoji": false,
      "text": "fooooo",
      "type": "plain_text",
    },
  ],
  "type": "context",
}
`;

exports[`slack jsx component with single string child 1`] = `
Object {
  "emoji": false,
  "text": "fooooo",
  "type": "plain_text",
}
`;

exports[`slack jsx component with span array children 1`] = `
Object {
  "text": "link <https://google.com|hi google>\\\\n hi user <@U12345>",
  "type": "mrkdwn",
  "verbatim": false,
}
`;

exports[`slack jsx flattens multiple sections in an array 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": Object {
        "text": "Hey <@42>,<@42> has requested your review for <http://foo.com|code review x>'",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
    Object {
      "text": Object {
        "emoji": false,
        "text": "1",
        "type": "plain_text",
      },
      "type": "section",
    },
    Object {
      "text": Object {
        "emoji": false,
        "text": "2",
        "type": "plain_text",
      },
      "type": "section",
    },
    Object {
      "text": Object {
        "emoji": false,
        "text": "3",
        "type": "plain_text",
      },
      "type": "section",
    },
  ],
  "mrkdwn": true,
  "response_type": "in_channel",
  "text": "New code review request",
}
`;

exports[`slack jsx message with complex fallback text 1`] = `
Object {
  "blocks": Array [],
  "mrkdwn": true,
  "response_type": "in_channel",
  "text": "Hey <@foo>progress: \`▓▓▓▓▓▓▓░░░\`",
}
`;

exports[`slack jsx message with simple fallback text 1`] = `
Object {
  "blocks": Array [],
  "mrkdwn": false,
  "response_type": "in_channel",
  "text": "simple message text",
}
`;

exports[`slack jsx only renders as_user when explicitly set 1`] = `
Object {
  "as_user": true,
  "blocks": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "sent as user",
        "type": "plain_text",
      },
      "type": "section",
    },
  ],
  "channel": "test_channel",
  "mrkdwn": true,
  "response_type": "in_channel",
  "text": "as user",
  "token": "test_token",
}
`;

exports[`slack jsx renders ActionsBlock elements as children 1`] = `
Object {
  "elements": Array [
    Object {
      "action_id": "foo",
      "text": Object {
        "emoji": true,
        "text": "Click",
        "type": "plain_text",
      },
      "type": "button",
    },
    Object {
      "alt_text": "alt",
      "image_url": "https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
      "type": "image",
    },
  ],
  "type": "actions",
}
`;

exports[`slack jsx renders BlockQuote 1`] = `
Object {
  "text": ">this is a test
>this too is a test",
  "type": "mrkdwn",
}
`;

exports[`slack jsx renders Home view 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": Object {
        "text": "this is a test
this too is a test",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
  ],
  "title": Object {
    "text": "Title Text",
    "type": "plain_text",
  },
  "type": "home",
}
`;

exports[`slack jsx renders a complex message 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": Object {
        "text": "Hey <@foo>
Hot code review alert! :thermometer:
<foo|some title> has *34 discussions*. You're missing out!",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
    Object {
      "block_id": "action-block-id",
      "elements": Array [
        Object {
          "action_id": "view",
          "style": "primary",
          "text": Object {
            "emoji": true,
            "text": "Get involved!",
            "type": "plain_text",
          },
          "type": "button",
        },
        Object {
          "action_id": "snooze",
          "text": Object {
            "emoji": true,
            "text": "Snooze",
            "type": "plain_text",
          },
          "type": "button",
        },
        Object {
          "action_id": "mute",
          "style": "danger",
          "text": Object {
            "emoji": true,
            "text": "Please stop!",
            "type": "plain_text",
          },
          "type": "button",
        },
      ],
      "type": "actions",
    },
    Object {
      "elements": Array [
        Object {
          "emoji": false,
          "text": "This review has been open for N days.",
          "type": "plain_text",
        },
      ],
      "type": "context",
    },
  ],
  "mrkdwn": true,
  "response_type": "in_channel",
  "text": "Hot code review alert",
}
`;

exports[`slack jsx renders a radiobutton group 1`] = `
Object {
  "action_id": "action1",
  "initial_option": Object {
    "description": Object {
      "emoji": true,
      "text": "description",
      "type": "plain_text",
    },
    "text": Object {
      "emoji": false,
      "text": "on",
      "type": "plain_text",
    },
    "value": "value1",
  },
  "options": Array [
    Object {
      "description": Object {
        "emoji": true,
        "text": "description",
        "type": "plain_text",
      },
      "text": Object {
        "emoji": false,
        "text": "on",
        "type": "plain_text",
      },
      "value": "value1",
    },
    Object {
      "text": Object {
        "emoji": false,
        "text": "off",
        "type": "plain_text",
      },
      "url": "https://botany.io",
      "value": "value2",
    },
  ],
  "type": "radio_buttons",
}
`;

exports[`slack jsx renders a simple checkbox 1`] = `
Object {
  "action_id": "action1",
  "options": Array [
    Object {
      "description": Object {
        "emoji": true,
        "text": "description",
        "type": "plain_text",
      },
      "text": Object {
        "emoji": false,
        "text": "option 1",
        "type": "plain_text",
      },
      "value": "value1",
    },
    Object {
      "text": Object {
        "emoji": false,
        "text": "option 2",
        "type": "plain_text",
      },
      "url": "https://botany.io",
      "value": "value2",
    },
  ],
  "type": "checkboxes",
}
`;

exports[`slack jsx renders a simple multi-select 1`] = `
Object {
  "action_id": "action1",
  "initial_options": Array [
    Object {
      "text": Object {
        "emoji": false,
        "text": "option 1",
        "type": "plain_text",
      },
      "value": "value1",
    },
  ],
  "options": Array [
    Object {
      "text": Object {
        "emoji": false,
        "text": "option 1",
        "type": "plain_text",
      },
      "value": "value1",
    },
    Object {
      "text": Object {
        "emoji": false,
        "text": "option 2",
        "type": "plain_text",
      },
      "value": "value2",
    },
  ],
  "placeholder": Object {
    "emoji": false,
    "text": "placeholder text",
    "type": "plain_text",
  },
  "type": "multi_static_select",
}
`;

exports[`slack jsx renders a simple single-select 1`] = `
Object {
  "action_id": "action1",
  "initial_option": Object {
    "text": Object {
      "emoji": false,
      "text": "option 1",
      "type": "plain_text",
    },
    "value": "value1",
  },
  "options": Array [
    Object {
      "text": Object {
        "emoji": false,
        "text": "option 1",
        "type": "plain_text",
      },
      "value": "value1",
    },
    Object {
      "text": Object {
        "emoji": false,
        "text": "option 2",
        "type": "plain_text",
      },
      "value": "value2",
    },
  ],
  "placeholder": Object {
    "emoji": false,
    "text": "placeholder text",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`slack jsx renders contextblock children 1`] = `
Object {
  "elements": Array [
    Object {
      "emoji": true,
      "text": "Hello, world",
      "type": "plain_text",
    },
    Object {
      "alt_text": "alt",
      "image_url": "https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
      "type": "image",
    },
  ],
  "type": "context",
}
`;

exports[`slack jsx renders contextblock with component children 1`] = `
Object {
  "elements": Array [
    Object {
      "emoji": true,
      "text": "Hello, world",
      "type": "plain_text",
    },
    Object {
      "alt_text": "declined",
      "image_url": "https://user-images.githubusercontent.com/97470/75739424-a7ac1800-5cb9-11ea-969a-e1ac9f12a41a.png",
      "type": "image",
    },
    "okay!",
  ],
  "type": "context",
}
`;

exports[`slack jsx renders inline text elements with promises returning text elements 1`] = `
Object {
  "elements": Array [
    Object {
      "text": "Hello, world! <@foo><@bar>, :thumbsup:",
      "type": "mrkdwn",
      "verbatim": false,
    },
  ],
  "type": "context",
}
`;
